# FinalFantasyXV-Unlocker

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
docs/: ffxv_memory_diagram.md  ffxv_unlock_research.md
include/: HttpServer.h  MainWindow.h  MemoryEditor.h  Patches.h  PatternScanner.h
resources/: app.manifest  resources.qrc
resources/wwwroot/: login.html  twitch-prime-members-get-your-own-kooky-chocobo-more-in-final-fantasy-xv-windows-edition-87d04c6ae217.html
resources/wwwroot/css/: m2.css  main-branding-base.css  page-overrides.css  style.css
resources/wwwroot/scripts/: auth.js  popup.js  sidebar.js  zoom.js
src/: HttpServer.cpp  MainWindow.cpp  MemoryEditor.cpp  PatternScanner.cpp  main.cpp
